test/compile-fail/resolution/conflicts/entity/top.rhdl
entity Top {
    in clk: bit,
    out clk: bit
}
